--- a/MainSystem/Drones/Drones.csproj
+++ b/MainSystem/Drones/Drones.csproj
@@ -8,7 +8,11 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
-    <PackageReference Include="MySql.Data" Version="8.0.19" />
+    <PackageReference Include="MySql.Data" Version="8.0.20" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DroneControllerAPI\DroneControllerAPI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
