--- a/MainSystem/DroneControllerAPI/DroneControllerAPI.csproj
+++ b/MainSystem/DroneControllerAPI/DroneControllerAPI.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Drones\Drones.csproj" />
+  </ItemGroup>
+
 </Project>
